# autocache-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: basic.py
src/autocache/: __init__.py  cache.py  info.py  management.py  state.py  utils.py
tests/: test_arguments.py  test_cache.py  test_clear_cache.py  test_decorator_wout_arg.py  test_expiration.py  test_function_clear.py  test_info.py  test_kwargs.py  test_remove.py  test_removing.py  test_stats.py
