[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autocache-python"
version = "0.1.1"
description = "A lightweight Python caching library with TTL expiration support"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Arnav Chaturvedi" }
]
keywords = [
    "cache",
    "caching",
    "performance",
    "optimization"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/pypro485/autocache-python"
Repository = "https://github.com/pypro485/autocache-python"